--- a/doc/_sass/style.scss
+++ b/doc/_sass/style.scss
@@ -40,6 +40,10 @@ a:visited {
     color: $visited-link-color;
 }
 
+section h1 {
+    border-bottom: 1px solid $page-text-color;
+}
+
 blockquote {
     background-color: $quote-background-color;
     border-left: 6px solid $page-text-color;
@@ -76,6 +80,7 @@ pre code {
 }
 
 #navbar {
+    border-bottom: 2px solid $page-text-color;
     background-color: $navbar-background-color;
     width: 100%;
     height: 4em;
@@ -113,6 +118,7 @@ pre code {
         margin-top: 0em;
     }
     #navbar {
+        border: none;
         width: 14em;
         height: 100%;
     }
@@ -126,5 +132,9 @@ pre code {
         float: none;
         display: block;
         padding: 0.2em 0.2em;
+    }
+    #navbar h2 { 
+        padding-bottom: 1em;
+        border-bottom: 2px solid $page-text-color;
     }
 }
