--- a/doc/_includes/nav.html
+++ b/doc/_includes/nav.html
@@ -1,15 +1,17 @@
 <nav>
     {% assign grouped_pages = site.pages | group_by: 'category' %}
     {% for group in grouped_pages %}
-        {% if group.name %}
+        {% if group.name != empty %}
+        <div class="category">
             <h3>{{ group.name }}</h3>
+            <ul>
+                {% for item in group.items %}
+                    {% if item.title %}
+                    <li><a href="{{ site.baseurl }}/{{ item.url }}">{{ item.title }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        </div>
         {% endif %}
-        <ul>
-            {% for item in group.items %}
-                {% if item.title %}
-                <li><a href="{{ site.baseurl }}/{{ item.url }}">{{ item.title }}</a></li>
-                {% endif %}
-            {% endfor %}
-        </ul>
     {% endfor %}
 </nav>
