--- a/doc/_sass/style.scss
+++ b/doc/_sass/style.scss
@@ -40,7 +40,7 @@ body {
     text-decoration: none;
     color: $page-text-color;
     position: absolute;
-    left: -1.3em;
+    left: -1.15em;
     bottom: 0.3em;
     opacity: 0;
     transition: .3s ease all;
@@ -105,6 +105,7 @@ pre code {
     transition: .3s ease all;
     cursor: pointer;
     user-select: none;
+    z-index: 2;
 
     &:hover {
         background: $hover-topbar-color;
@@ -114,7 +115,7 @@ pre code {
 #content {
     color: $page-text-color;
     background-color: $page-background-color;
-    padding: 0em 1em;
+    padding: 0em 1.2em;
 }
 
 #topbar {
