--- a/doc/_sass/style.scss
+++ b/doc/_sass/style.scss
@@ -38,6 +38,7 @@ body {
     font-size: 0.6em;
     float: left;
     text-decoration: none;
+    user-select: none;
     color: $page-text-color;
     position: absolute;
     left: -1.4em;
