--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -10,7 +10,7 @@
         <div id="page">
             <div id="topbar">
                 <div id="hamburger" onclick="document.getElementById('navbar').classList.toggle('expanded');">☰</div>
-                <h2>Eta Docs</h2>
+                <h2>Fu Docs</h2>
             </div>
             <div id="navbar">
                 {% include nav.html %}
